src/test/ui/borrowck/borrowck-loan-blocks-move.stderr
error[E0505]: cannot move out of `v` because it is borrowed
  --> $DIR/borrowck-loan-blocks-move.rs:21:10
   |
LL |     let _w = &v;
   |               - borrow of `v` occurs here
LL |     take(v); //~ ERROR cannot move out of `v` because it is borrowed
   |          ^ move out of `v` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
